--- a/src/App.css
+++ b/src/App.css
@@ -7,5 +7,17 @@
 .container {
   margin: 0 auto;
   padding: 0 20px;
-  max-width: 1240px;
+  max-width: 1340px;
+}
+input {
+  outline: none;
+}
+ul {
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+}
+a {
+  text-decoration: none;
+  color: black;
 }
